compiler/tests-spec/testData/psi/linked/expressions/constant-literals/real-literals/p-3/pos/1.3.kt
/*
 * KOTLIN PSI SPEC TEST (POSITIVE)
 *
 * SPEC VERSION: 0.1-100
 * MAIN LINK: expressions, constant-literals, real-literals -> paragraph 3 -> sentence 1
 * NUMBER: 3
 * DESCRIPTION: Real literals with omitted a whole-number part and an exponent mark without digits after it.
 */

konst konstue = .0E
konst konstue = .0e
konst konstue = .00e-
konst konstue = .000E+

konst konstue = .0e
konst konstue = .00E+
konst konstue = .000e
konst konstue = .0000E
konst konstue = .0e+
konst konstue = .00E-
konst konstue = .000e
konst konstue = .0000e
konst konstue = .0E-

konst konstue = .888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888888e+
konst konstue = .000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000e
konst konstue = .000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000e-
konst konstue = .000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000e+
